--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "recoil": "^0.5.2",
+    "recoil-persist": "^4.0.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
