--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@types/react-dom": "^17.0.13",
     "aws-amplify": "^4.3.16",
     "bootstrap": "^5.1.3",
-    "node-sass": "^7.0.1",
+    "node-sass": "^4.14.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "recoil": "^0.5.2",
     "recoil-persist": "^4.0.0",
     "typescript": "^4.6.2",
